Fixed the issue with dark mode - Added feature auto unmute on user interaction

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,6 +21,8 @@ html,
 body {
   padding: 0;
   margin: 0;
+  color: white;
+  background: black;
 }
 
 a {
